This documents significant changes in the dev branch of ksh 93u+m.
For full details, see the git log at: https://github.com/ksh93/ksh
Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.

2025-06-14:

- Fixed a bug occurring on systems with posix_spawn(3), spawnve(2), and
  spawn(2), which when exploited could cause ksh93 to execute scripts
  without a shebang with a shell other than itself, provided /bin/ksh
  was hijacked, or in the case of ksh being unable to obtain it's own
  executable path, whatever the SHELL variable was set to.

- Fixed a bug that could cause scripts without a shebang to run
  without POSIX mode enabled when executed in a virtual subshell.

- Fixed a bug that could allow an attacker to hijack ksh93 during
  shell initialization to execv a shell other than ksh itself, leading to
  the ksh process being surreptitiously replaced with bash, zsh, or
  really anything, provided the binary name ends with the letters
  'sh'.

2025-05-31:

- Fixed a bug that caused the multiline option to break when PS*
  prompts use the kitty terminal's escape sequence (e.g. $'\E[4:4m'
  in the PS1 prompt for formatting spaced dots).

2025-05-29:

- Fixed a serious but rarely occurring regression that corrupts variable
  names in assignments. It could be triggered in large scripts and cause a
  spurious "invalid variable name" error. Bug introduced on 2024-01-16.

- Restored the ability to import environment variables with multibyte UTF-8
  names while in a UTF-8 locale. This broke on 2020-09-26.

2025-05-27:

- Fixed a crash that could occur in some scenarios when /opt/ast/bin
  builtins handled invalid options in virtual subshells.

- Fixed a bug in printf where \u0025 was taken as a % operator in a
  formatter argument. For example, printf '\u0025\n' now correctly prints a
  % followed by a newline instead of producing an error.

- [v1.1] Fixed another bug with superfluous operands in test/[ that slipped